# python_learning

./: .envrc  .gitignore  Pipfile  README.md  nvidia_gpu_reset.sh  pyproject.toml  python_learning.code-workspace  python_virtual_environments.md  runonsave.sh  start_jupyter.sh  todo_reads.md  useful_python_packages.md
clean_code_python/: 1_tools.md  2_pythonic_code.md  3_general_traits_of_good_code.md  4_solid_principles.md  5_decorators.md  6_descriptors.md  7_generators.md  9_common_design_patterns.md
fluent_python/: 1_python_data_model.md  2_array_of_sequences.md
learn_python3/: naming_conventions.md  notes.md
mastering_python_regex/: 1_regex_intro.md
misc/: built_in_constants.md  builtins_in_python.md  classmethod_vs_staticmethod.md  collections_complexity_python.txt  context_management_protocol.md  coroutines.md  cpu_memory_profiling.md  debugging_with_pdb.md  decorators.md  dependency_injection.md  functional_programming_python.md  generators.md  generators_and_coroutines.md  interfaces_in_python.md  object_oriented_programming.md  pass_statement.md  protocols_in_python.md  python_data_classes.md  python_enumeration.md  python_logging_module.md  python_metaclasses.md  python_regex.md  python_traceback.md  python_underscores.md  recursion.md  scope_LEGB_rule.md  simplenamespace.md  slots_in_python.md  type_hinting_python.md  typed_dict.md
python3_absolute_beginners/: chapter_10_exceptions.md  chapter_11_1_modules.md  chapter_11_2_packages.md  chapter_11_modules_and_packages.md  chapter_4_making_choices.md  chapter_5_lists.md  chapter_6_functions.md  (+4 more)
(+97 files in other folders)
