[tool.black]
line-length = 100
target-version = ['py10']

[tool.ruff]
line-length = 100

[tool.ruff.pydocstyle]
convention = "google"

[tool.poetry]
authors = ["girish pasupathy <girishpasupathy@gmail.com>"]
description = "Python learning."
license = "MIT"
name = "Python learning"
version = "0.1.0"

[tool.poetry.dependencies]
aiofiles = "^22.1.0"
aiohttp = "^3.8.3"
numba = "^0.56.4"
pycuda = "^2022.2.2"
python = "^3.10"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
ipython = "^8.8.0"
ipython-memory-usage = "^1.7"
jupyter = "^1.0.0"
jupyter-http-over-ws = "^0.0.8"
mypy = "^0.991"
pytest = "^7.2.1"
ruff = "^0.0.235"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
